# KI-Entwicklung

./: .gitignore  CMakeLists.txt  LICENSE  MIT.txt  main.cpp
src/: GlobalHomeostasis.cpp  GlobalHomeostasis.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  NeuronId.h  Synapse.cpp  Synapse.h
